--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,6 @@ body {
 	/*default image size 650x1285*/
     background-image: url('../images/casio_base.png');
     background-repeat: no-repeat;
-/*    background-attachment: fixed;*/
     background-position: top center; 
     margin: 0;
 }
@@ -43,6 +42,8 @@ body {
 	border: 1px solid yellow;
 }
 
+/*content*/
+
 .key{
 	width: 50px;
 	height: 30px;
@@ -54,4 +55,9 @@ body {
 
 .cmdkey{
 	background-color: lightgreen;
+}
+
+#display-screen{
+	text-align: center;
+	font-size: 36px;
 }
