--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -79,6 +79,7 @@ body{
 }
 .side-flex-row-2{
   flex: 35%;
+  cursor: pointer;
 }
 .side-flex-row-3{
   flex: 5%;
@@ -86,6 +87,7 @@ body{
 }
 .side-flex-row-4{
   flex: 35%;
+  cursor: pointer;
 }
 .side-flex-row-5{
   flex: 16%;
@@ -106,6 +108,7 @@ button{
   border-color: #7f8082 #7f8082 #2b2c30 #2b2c30;
   margin-left: 9.5%;
   margin-top: 4%;
+  cursor: pointer;
 }
 .numrow-4>button{
   margin-top: 2.7%;
